# Geode

./: .gitignore  Cargo.toml  README.md
Geode_DB/: .gitignore  Cargo.toml
Geode_DB/src/: main.rs
Geode_DB/src/PsuedoCode/: Buffer_Pool_Psuedo.rs  Crate_Structure_Psuedo.rs  Disk._Psuedo.rs  Page_Psuedo.rs  Tuple_Psuedo.rs
Geode_DB/src/buffer/: buffer_pool_manager.rs
Geode_DB/src/catalog/: schema.rs
Geode_DB/src/db_types/: container.rs  mod.rs
Geode_DB/src/storage/: disk.rs  mod.rs  page.rs  page_guard.rs  tuple.rs
Geode_DB/src/test/: page_test.rs
Geode_DB/src/utils/: fdpool.rs  identifiers.rs  mod.rs  replacer.rs
src/: engine.rs  main.rs  wal.rs
src/buffer/: README.md  buffer_pool_manager.rs  flusher.rs  mod.rs
src/catalog/: mod.rs  schema.rs
src/db_types/: container.rs  mod.rs
src/db_types/types/: bigint.rs  boolean.rs  char.rs  decimal.rs  int.rs  mod.rs  smallint.rs  varchar.rs
src/index/: README.md  btree.rs  btree_ops.rs  errors.rs  mod.rs  node.rs  node_type.rs
src/index/Readme/: Btree_Schema.md  (+4 more)
src/iterators/: b_tree_iterator.rs  iterator.rs  leaf_node_iterator.rs  mod.rs  slot_page_iterator.rs
src/refactor_test/: codec_test.rs  iterator_test.rs  mod.rs  tree_api_test.rs
src/storage/: tuple.rs
src/test/: index_test.rs  mod.rs  page_test.rs
src/tests/: b_tree_node_test.rs  b_tree_page_test.rs  db_io_test.rs  flusher_test.rs  index_test.rs  iterator_test.rs  mod.rs  page_test.rs  scheduler_test.rs  schema_test.rs  slotted_page_test.rs  tree_api_test.rs  tuple_test.rs
src/utils/: concurrent_linked_map.rs  fdpool.rs  mod.rs
(+35 files in other folders)
