[package]
name = "Geode_DB"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0"

bytes = "1"

libc = "0.2"
byteorder = "1.5.0"
io-uring = "0.6"
hashlink = "0.10.0"
tokio = { version = "1", features = ["full"] }
dashmap = "=6.1.0"
crossbeam-queue = "0.3.12"
ouroboros = "=0.10.1"
crc32fast = "=1.0.3"
bincode = "2.0.1"


